ppx/tests/failing/4.ml
let _foo =
 fun [@reaml.component "Foo"] () ->
  let[@reaml] () = () in
  ()
